Changed photo to Preston

--- a/RetratoComFoto/RetratoComFoto.html
+++ b/RetratoComFoto/RetratoComFoto.html
@@ -30,7 +30,7 @@
 <body>
   <div class="circular--portrait">
     <img src="Portrait.jfif" alt="Frame" >
-    <img src="gettyimages.jpg" alt="Photo" >
+    <img src="gettyimages0.jpg" alt="Photo" >
   </div>
 </body>
 </html>
