--- a/RetratoComFoto/RetratoComFoto.html
+++ b/RetratoComFoto/RetratoComFoto.html
@@ -28,9 +28,10 @@
   </style>
 </head>
 <body>
+  <h1>Framer</h1>
   <div class="circular--portrait">
     <img src="Portrait.jfif" alt="Frame" >
-    <img src="gettyimages0.jpg" alt="Photo" >
+    <img src="gettyimages.jpg" alt="Photo" >
   </div>
 </body>
 </html>
