--- a/RetratoComFoto/RetratoComFoto.html
+++ b/RetratoComFoto/RetratoComFoto.html
@@ -1,34 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <style>
-.circular--portrait {
-  position: relative;
-  width: 800px;
-  height: 1200px;
-  overflow: hidden;
-}
-.circular--portrait img:first-child {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: auto;
-}
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Photo and Frame</title>
 
-.circular--portrait img:last-child {
-  position: absolute;
-  top: 46%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 50%;
-  height: 45%;
-  border-radius: 50%;
-}
-  </style>
+  <!--Custom CSS-->
+  <link rel="stylesheet" href="css/stytles.css"> 
+  
 </head>
 <body>
-  <h1>Framer</h1>
+<!-- This is how you comment a HTML-->
+<h1>Framer</h1>
   <div class="circular--portrait">
     <img src="Portrait.jfif" alt="Frame" >
     <img src="gettyimages.jpg" alt="Photo" >
