--- a/RetratoComFoto/RetratoComFoto.html
+++ b/RetratoComFoto/RetratoComFoto.html
@@ -14,7 +14,7 @@
 <h1>Framer</h1>
   <div class="circular--portrait">
     <img src="Portrait.jfif" alt="Frame" >
-    <img src="gettyimages.jpg" alt="Photo" >
+    <img src="gettyimages0.jpg" alt="Photo" >
   </div>
 </body>
 </html>
