Changes at Readme and cleanup at Stytles

--- a/RetratoComFoto/RetratoComFoto.html
+++ b/RetratoComFoto/RetratoComFoto.html
@@ -7,14 +7,14 @@
 
   <!--Custom CSS-->
   <link rel="stylesheet" href="css/stytles.css"> 
-  
 </head>
+
 <body>
 <!-- This is how you comment a HTML-->
-<h1>Framer</h1>
+<h1>Happy Birthday</h1>
   <div class="circular--portrait">
-    <img src="Portrait.jfif" alt="Frame" >
-    <img src="gettyimages0.jpg" alt="Photo" >
+    <img src="Portrait.png" alt="Frame" >
+    <img src="gettyimages.jpg" alt="Photo" >
   </div>
 </body>
 </html>
