With waiting room

--- a/RetratoComFoto/RetratoComFoto.html
+++ b/RetratoComFoto/RetratoComFoto.html
@@ -14,7 +14,7 @@
 <h1>Happy Birthday</h1>
   <div class="circular--portrait">
     <img src="Portrait.png" alt="Frame" >
-    <img src="gettyimages.jpg" alt="Photo" >
+    <img src="gettyimages1.jpg" alt="Photo" >
   </div>
 </body>
 </html>
