--- a/WebPageFinancialDashboard/main.html
+++ b/WebPageFinancialDashboard/main.html
@@ -5,22 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Financial Dashboard</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <style>
-        .container {
-            width: 80%;
-            margin: auto;
-            padding-top: 50px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Financial Dashboard</h1>
-        <canvas id="financialChart"></canvas>
-        <canvas id="expensesChart" style="margin-top: 50px;"></canvas>
-        <h2>Financial Data</h2>
-        <ul id="financialData"></ul>
+        <header>
+            <h1>Financial Control Dashboard</h1>
+        </header>
+        <main>
+            <section class="chart">
+                <canvas id="financialChart"></canvas>
+            </section>
+            <section class="chart">
+                <canvas id="expensesChart"></canvas>
+            </section>
+            <section class="data">
+                <h2>Financial Data</h2>
+                <ul id="financialData">
+                    <!-- Dynamic data will be inserted here -->
+                </ul>
+            </section>
+        </main>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
